--- a/blog-project/package.json
+++ b/blog-project/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@tinymce/tinymce-react": "^4.3.2",
     "appwrite": "^14.0.0-rc.5",
+    "compressorjs": "^1.2.1",
     "html-react-parser": "^5.1.8",
     "quill": "^2.0.0-rc.2",
     "react": "^18.2.0",
