--- a/blog-project/package.json
+++ b/blog-project/package.json
@@ -15,6 +15,7 @@
     "appwrite": "^14.0.0-rc.5",
     "compressorjs": "^1.2.1",
     "html-react-parser": "^5.1.8",
+    "openai": "^4.29.1",
     "quill": "^2.0.0-rc.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
